backend/src/main/k8s/kserver/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podcast-server
spec:
  template:
    spec:
      containers:
        - name: app
          volumeMounts:
            - name: podcast-server-config
              mountPath: /application.yaml
              subPath: application.yaml
            - name: podcasts-files
              mountPath: /podcasts
      volumes:
        - name: podcast-server-config
          configMap:
            name: podcast-server
        - name: podcasts-files
          hostPath:
            path: /opt/podcast-server/files/
            type: Directory
