backend/src/main/k8s/kserver/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  template:
    spec:
      containers:
        - name: database
          volumeMounts:
            - name: database
              mountPath: /opt/h2-data
      volumes:
        - name: database
          hostPath:
            path: /opt/podcast-server/database/
            type: Directory
