backend/src/main/k8s/kserver/fs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fs
spec:
  template:
    spec:
      containers:
        - name: fs
          volumeMounts:
            - name: podcasts-files
              mountPath: /var/www/podcast-server-files/data
      volumes:
        - name: podcasts-files
          hostPath:
            path: /opt/podcast-server/files/
            type: Directory
