backend/src/main/k8s/kserver/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  ports:
    - name: http-nginx-port
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: ui
    module: frontend
    serving: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  selector:
    matchLabels:
      app: ui
      module: frontend
      serving: "true"
  template:
    metadata:
      labels:
        app: ui
        module: frontend
        serving: "true"
    spec:
      containers:
        - image: podcastserver/ui:latest
          imagePullPolicy: Always
          name: ui
          readinessProbe:
            httpGet:
              path: /
              port: 80
          ports:
            - name: http-port
              containerPort: 80
              protocol: TCP
