backend/src/main/k8s/kserver/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: podcast-server
spec:
  rules:
    - host: podcast-server.tk
      http:
        paths:
          - path: /api
            backend:
              serviceName: podcast-server
              servicePort: 8080
          - path: /data
            backend:
              serviceName: fs
              servicePort: 80
          - path: /
            backend:
              serviceName: ui
              servicePort: 80
